--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ecctrl": "1.0.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router": "^7.7.0",
     "react-scripts": "^5.0.1",
     "three": "0.157.0",
     "zustand": "^5.0.6"
